GSLT/src/test/module/bad/BadBindOOB.module
Module BadBindOOB {
  Theory Bad() {
    new()
      .addExports ( Proc; Name; )
      .addTerms (
        PRecv . Proc ::= "for" "(" (Bind Name [3]) "<-" Name ")" "{" Proc "}" ;
      )
  }
}